<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewUserActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:textSize="30sp" />

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register"
        android:layout_alignLeft="@id/Register"
        android:layout_alignStart="@id/Register"
        android:text="@string/userLabelString"
        android:id="@+id/username"
        />
    <EditText
        android:hint="@string/NameEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/username"
        android:layout_alignTop="@id/username"
        android:inputType="text"
        android:id="@+id/eduser"
        android:minWidth="75dp"
        android:layout_toEndOf="@id/username"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:text="@string/passwordLabelString"
        android:layout_alignStart="@id/Register"
        android:layout_alignLeft="@id/Register"
        android:layout_marginTop="40dp"
        android:id="@+id/password1"
        />
    <EditText
        android:hint="@string/PasswordEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordwrite"
        android:layout_toRightOf="@id/password1"
        android:layout_toEndOf="@id/password1"
        android:layout_alignTop="@id/password1"
        android:minWidth="75dp"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1"
        android:id="@+id/password2"
        android:text="@string/confirmpass"
        android:layout_alignStart="@id/Register"
        android:layout_alignLeft="@id/Register"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/confirmpassword"
        android:layout_toEndOf="@id/password2"
        android:layout_toRightOf="@id/password2"
        android:layout_alignTop="@id/password2"
        android:hint="@string/RepeatPassword"
        android:minWidth="75dp"
        android:importantForAutofill="no" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="?android:attr/buttonBarButtonStyle"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Register"
            android:onClick="onCreate1"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onCancel"
            android:text="@string/Cancel"
            style="?android:attr/buttonBarButtonStyle"

            tools:ignore="ButtonOrder" />
    </LinearLayout>

</RelativeLayout>