<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Theme.AppCompat">

    <fragment
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/songTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:onClick="onRefresh"
        android:text="@string/refresh">

    </Button>

    <TextView
        android:id="@+id/songTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:background="@color/myDarkGray"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:layout_above="@+id/authorTextView">

    </TextView>

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/myDarkGray"
        android:padding="10dp"
        android:layout_alignParentBottom="true">

    </TextView>

</RelativeLayout>